Finds the mean of even numbers up to 10.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -23,6 +23,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean is: 6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [2,4,6,8,10]\n",
+    "mean = 0\n",
+    "for number in numbers:\n",
+    "    mean += number\n",
+    "mean /= len(numbers)\n",
+    "print('The mean is:', mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
