Added comments to the scripts in parts 1 and 2.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -17,6 +17,7 @@
    ],
    "source": [
     "word = \"supercalifragilisticexpialidocious\"\n",
+    "#slices is a list containing each interesting section of 'word'\n",
     "slices = [word[:5], word[18:21], word[-2:]]\n",
     "print(slices)\n"
    ]
@@ -37,10 +38,15 @@
     }
    ],
    "source": [
+    "#numbers is an array containing even numbers up to ten\n",
     "numbers = [2,4,6,8,10]\n",
+    "#mean will be used to calculate the mean of the numbers in 'numbers'\n",
     "mean = 0\n",
+    "#iterates through 'numbers'\n",
     "for number in numbers:\n",
+    "    #adds each number to mean\n",
     "    mean += number\n",
+    "#divides by the length of the array\n",
     "mean /= len(numbers)\n",
     "print('The mean is:', mean)"
    ]
