Script to find the standard deviation of the numbers in problem 2.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['super', 'ice', 'us']\n"
+      "super ice us\n"
      ]
     }
    ],
@@ -49,6 +49,38 @@
     "#divides by the length of the array\n",
     "mean /= len(numbers)\n",
     "print('The mean is:', mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation is: 2.8284271247461903\n"
+     ]
+    }
+   ],
+   "source": [
+    "#std_deviation will be used to calculate the standard deviation of 'numbers'\n",
+    "std_deviation = 0\n",
+    "#iterates through 'numbers'\n",
+    "for number in numbers:\n",
+    "    #Finds the difference between 'number' and 'mean'\n",
+    "    #squares the difference, and adds it to 'std_deviation'\n",
+    "    std_deviation += (number - mean) ** 2\n",
+    "#divides by the length of the array\n",
+    "#this value is the varience\n",
+    "std_deviation /= len(numbers)\n",
+    "#finds the square root of the varience to get standard deviation\n",
+    "std_deviation = std_deviation ** 0.5\n",
+    "print(\"The standard deviation is:\", std_deviation)\n",
+    "    "
    ]
   },
   {
