Calculates the standard error of the mean.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -85,12 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard error is: 1.2649110640673518\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculates the standard error of the mean\n",
+    "std_error = std_deviation/(len(numbers) ** 0.5)\n",
+    "print (\"The standard error is:\", std_error)"
+   ]
   }
  ],
  "metadata": {
