Adds author name to the bottom of the script.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -103,6 +103,31 @@
     "std_error = std_deviation/(len(numbers) ** 0.5)\n",
     "print (\"The standard error is:\", std_error)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isaac Menninga\n"
+     ]
+    }
+   ],
+   "source": [
+    "#first name\n",
+    "First = \"Isaac\"\n",
+    "#last name\n",
+    "Last = \"Menninga\"\n",
+    "#Combines first and last names, with a space in the middle to get full name\n",
+    "full_name = First + \" \" + Last\n",
+    "print(full_name)"
+   ]
   }
  ],
  "metadata": {
