Imports numpy to check accuracy of the scripts.

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -33,11 +33,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean is: 6.0\n"
+      "The mean is: 6.0\n",
+      "The mean according to numpy is: 6.0\n"
      ]
     }
    ],
    "source": [
+    "#imports numpy and scipy.stats libraries to check answers\n",
+    "import numpy, scipy.stats\n",
     "#numbers is an array containing even numbers up to ten\n",
     "numbers = [2,4,6,8,10]\n",
     "#mean will be used to calculate the mean of the numbers in 'numbers'\n",
@@ -48,12 +51,14 @@
     "    mean += number\n",
     "#divides by the length of the array\n",
     "mean /= len(numbers)\n",
-    "print('The mean is:', mean)"
+    "print('The mean is:', mean)\n",
+    "#checks answer versus the numpy library's mean function\n",
+    "print('The mean according to numpy is:', numpy.mean(numbers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +67,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The standard deviation is: 2.8284271247461903\n"
+      "The standard deviation is: 2.8284271247461903\n",
+      "The standard deviation according to numpy is: 2.82842712475\n"
      ]
     }
    ],
@@ -80,12 +86,13 @@
     "#finds the square root of the varience to get standard deviation\n",
     "std_deviation = std_deviation ** 0.5\n",
     "print(\"The standard deviation is:\", std_deviation)\n",
-    "    "
+    "#checks answer versus the numpy library's function for standard deviation\n",
+    "print(\"The standard deviation according to numpy is:\", numpy.std(numbers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -94,14 +101,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The standard error is: 1.2649110640673518\n"
+      "The standard error is: 1.2649110640673518\n",
+      "The standard error according to numpy is: 1.26491106407\n"
      ]
     }
    ],
    "source": [
     "#Calculates the standard error of the mean\n",
     "std_error = std_deviation/(len(numbers) ** 0.5)\n",
-    "print (\"The standard error is:\", std_error)"
+    "print (\"The standard error is:\", std_error)\n",
+    "#checks answer versus the scipy library's standard error of the mean function\n",
+    "print (\"The standard error according to numpy is:\", scipy.stats.sem(numbers, ddof=0))"
    ]
   },
   {
